[metadata]
name = learner-certificates
version = attr: learner_certificates.__version__
author = Magnus Hagdorn
author_email = magnus.hagdorn@charite.de
url = https://github.com/ScientificComputingCharite/learner-certificates
description = generating Carpentries certificates
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Education
    Intended Audience :: Education

[options]
packages =
    learner_certificates
zip_safe = True
include_package_data = True
install_requires =
    pandas
    jinja2

lint = flake8 >= 3.5.0

[options.entry_points]
console_scripts =
    generate_carpentries_certificate = learner_certificates.certificates:main

[options.package_data]
learner_certificates = templates/*.svg
